<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iahrs_ros2_driver</name>
  <version>1.0.0</version>
  <description>Driver for IntelliThings iAHRS</description>
  <maintainer email="techms5499@gmail.com">mechasolution</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>iahrs_ros2_driver_msgs</buildtool_depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>